--- a/Strafunski-StrategyLib.cabal
+++ b/Strafunski-StrategyLib.cabal
@@ -10,6 +10,11 @@ category:            Generics
 build-type:          Simple
 cabal-version:       >=1.8
 
+source-repository head
+  type:              git
+  location:          https://github.com/jkoppel/Strafunski-StrategyLib
+
+
 library
 
   Extensions:
