--- a/Strafunski-StrategyLib.cabal
+++ b/Strafunski-StrategyLib.cabal
@@ -52,8 +52,8 @@ library
 --   other-modules:       
 
   build-depends:
-        base > 4.4,
-        mtl > 2.1,
-        syb > 0.3,
-        directory > 1.2
+        base > 4.4 && < 4.6.1,
+        mtl > 2.1 && < 2.2,
+        syb > 0.3 && < 4.1,
+        directory > 1.2 && < 1.2.1
   
