--- a/Strafunski-StrategyLib.cabal
+++ b/Strafunski-StrategyLib.cabal
@@ -1,5 +1,5 @@
 name:                Strafunski-StrategyLib
-version:             5.0.0.6
+version:             5.0.0.7
 synopsis:            Library for strategic programming
 description:         This is a version of the StrategyLib library originally shipped with Strafunski, Cabalized and updated to newer versions of GHC. A description of much of StrategyLib can be found in the paper "Design Patterns for Functional Strategic Programming."
 license:             BSD3
@@ -51,7 +51,7 @@ library
 --   other-modules:       
 
   build-depends:
-        base > 4.4 && <= 4.8,
+        base > 4.4 && < 4.9,
         mtl > 2.2,
         syb > 0.3 && < 4.1,
         directory > 1.1 && < 1.2.2,
