--- a/Strafunski-StrategyLib.cabal
+++ b/Strafunski-StrategyLib.cabal
@@ -51,9 +51,10 @@ library
 --   other-modules:       
 
   build-depends:
-        base > 4.4 && < 4.10,
+        base > 4.4 && < 4.12,
         mtl > 2.2,
         syb > 0.3 && < 4.1,
         directory > 1.1 && < 1.4,
         transformers >= 0.2
-  
+  if !impl(ghc >= 8.0)
+    build-depends: semigroups == 0.18.*
